LOG of the CHANGES in the package GenomicTools.fileHandler

-----------------------------------------------------

Version with odd last numbers are development versions.
Stable releases have even version numbers:

-----------------------------------------------------

Version 0.2.*:
2: toupper feature added to importFA function
1: Bugfix in importFA that wrongly determined if fasta file has alternating header rows

Version 0.2: Release version

Version 0.1.5.x:
1: importFA does not rely on alternating rows anymore
2: importSTARLog imports now more statistics and is able to import recursively several log files
3: plotTotalReads function added
4: summary.STARLog function added
5: plotUniquelyReads function added and also added to the summary function
6: importSTARLog handles now STAR2.7.2b log files (at the moment ONLY final.log)
7: crucial bugfix in variant coding for importVCF
8: print.gtf function added
9: importGTF: Bugfix in case the features are substring from each other
10: importFA: Minor comfort fix to make the function run with smoother output. Further, verbose option added
11: importVCF: Phased input accepted for "/" coding (it is transformed in non-phased notation)
12: importVCF: Info fields are now printed as well
13: importVCF: Simplify parameter added
14: summary.fz: This is now a data.frame
15: importVCF: formatFields option added
16: summary.fa: output corrected, print() removed
17: summary.fq: output synchronized with summary.fa
18: summary.fa: added Total length
19: summary.fq: added Total length
20: bugfix in summary.fa and fq (missing sum)
21: importSTARlog path adjusted for log files
22: importGTF: V9 is now split in ";" and "; "
23: exportGTF() function added
24: importFA(): Critical bugfix
25: importVCF(): Default changed from getInfo = FALSE to TRUE

Version 0.1.4 (Stable Version):
* Improvements of summary functions
* Minor bugfixes

Version 0.1.2 (Stable Version):
* Initial commit with most import I/O functions added
Planned next features